--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>fr.neatmonster.nocheatplus</groupId>
 			<artifactId>NoCheatPlus</artifactId>
-			<version>3.7.0</version>
+			<version>3.7.0-67</version>
 			<scope>runtime</scope>
 		</dependency>
 		
