--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	
 	<groupId>com.minebans</groupId>
 	<artifactId>MineBans</artifactId>
-	<version>0.14-SNAPSHOT</version>
+	<version>0.14.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>MineBans</name>
@@ -84,9 +84,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>com.minerealm.core</groupId>
-			<artifactId>CoreProtection</artifactId>
-			<version>1.54c</version>
+			<groupId>net.coreprotect</groupId>
+			<artifactId>CoreProtect</artifactId>
+			<version>1.60</version>
 			<scope>compile</scope>
 		</dependency>
 		
