--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	
 	<groupId>com.minebans</groupId>
 	<artifactId>MineBans</artifactId>
-	<version>0.14.5-SNAPSHOT</version>
+	<version>0.14.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>MineBans</name>
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.4.4-R0.1-SNAPSHOT</version>
+			<version>1.4.5-R0.2</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>de.diddiz.LogBlock</groupId>
 			<artifactId>LogBlock</artifactId>
-			<version>1.58</version>
+			<version>1.60</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -100,7 +100,7 @@
 		<dependency>
 			<groupId>fr.neatmonster.nocheatplus</groupId>
 			<artifactId>NoCheatPlus</artifactId>
-			<version>3.7.0-145</version>
+			<version>3.8.1-259</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
