--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	
 	<groupId>com.minebans</groupId>
 	<artifactId>MineBans</artifactId>
-	<version>0.14.6-SNAPSHOT</version>
+	<version>0.15-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>MineBans</name>
@@ -37,21 +37,21 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.4.5-R0.2</version>
+			<version>1.4.6-R0.2-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>uk.co.jacekk.bukkit</groupId>
 			<artifactId>baseplugin</artifactId>
-			<version>5.0</version>
+			<version>7.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.minebans.antispam</groupId>
 			<artifactId>MineBansAntiSpam</artifactId>
-			<version>0.4.3-SNAPSHOT</version>
+			<version>0.5-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -94,14 +94,14 @@
 			<groupId>cc.co.evenprime.bukkit.nocheat</groupId>
 			<artifactId>NoCheat</artifactId>
 			<version>3.50</version>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>fr.neatmonster.nocheatplus</groupId>
 			<artifactId>NoCheatPlus</artifactId>
 			<version>3.8.1-259</version>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	
@@ -127,7 +127,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>1.7.1</version>
+				<version>2.0</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -149,7 +149,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.0</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
