--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: ${project.name}
-version: ${project.version}
-main: ${project.groupId}.${project.artifactId}.${project.name}
-website: ${project.url}
+name: "${project.name}"
+version: "${project.version}"
+main: "${project.groupId}.${project.artifactId}.${project.name}"
+website: "${project.url}"
 softdepend: [LogBlock, HawkEye, Guardian, SWatchdog, CoreProtect, NoCheat, NoCheatPlus, MineBansAntiSpam]
 loadbefore: [Essentials, CommandBook]
