Use GSON instead of bundling JSON.

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
 	<groupId>com.minebans</groupId>
 	<artifactId>minebans</artifactId>
 	<version>0.15-SNAPSHOT</version>
@@ -38,6 +37,13 @@
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
 			<version>1.4.6-R0.3</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.2</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -141,6 +147,7 @@
 					<artifactSet>
 						<includes>
 							<include>uk.co.jacekk.bukkit:baseplugin</include>
+							<include>com.google.code.gson:gson</include>
 						</includes>
 					</artifactSet>
 				</configuration>
