--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
 		
 		<dependency>
 			<groupId>dev.bukkit.org.server-mods</groupId>
+			<artifactId>hawkeye-reload</artifactId>
+			<version>1.1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>dev.bukkit.org.server-mods</groupId>
 			<artifactId>nocheat</artifactId>
 			<version>3.5.0</version>
 			<scope>compile</scope>
