--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.minebans</groupId>
 	<artifactId>minebans</artifactId>
-	<version>0.15.2</version>
+	<version>0.16-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>MineBans</name>
