Added Prism support.

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
 		
 		<dependency>
 			<groupId>dev.bukkit.org.server-mods</groupId>
+			<artifactId>prism</artifactId>
+			<version>1.5.6</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>dev.bukkit.org.server-mods</groupId>
 			<artifactId>nocheat-classic</artifactId>
 			<version>3.6.4</version>
 			<scope>compile</scope>
