--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.minebans</groupId>
 	<artifactId>minebans</artifactId>
+	<name>MineBans</name>
 	<version>0.16-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	
-	<name>MineBans</name>
 	<url>http://dev.bukkit.org/server-mods/minebans/</url>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<upload.dbo.category>server-mods</upload.dbo.category>
+		<upload.dbo.slug>minebans</upload.dbo.slug>
 	</properties>
 	
 	<repositories>
