--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 		
 		<upload.dbo.category>server-mods</upload.dbo.category>
 		<upload.dbo.slug>minebans</upload.dbo.slug>
+		
+		<baseplugin.version>10.0</baseplugin.version>
+		<baseplugin.package>10_0</baseplugin.package>
 	</properties>
 	
 	<repositories>
@@ -43,7 +46,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.4.7-R1.0</version>
+			<version>1.5.1-R0.1</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -57,7 +60,7 @@
 		<dependency>
 			<groupId>uk.co.jacekk.bukkit</groupId>
 			<artifactId>baseplugin</artifactId>
-			<version>9.1</version>
+			<version>${baseplugin.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -164,6 +167,12 @@
 							<include>com.google.code.gson:gson</include>
 						</includes>
 					</artifactSet>
+					<relocations>
+						<relocation>
+							<pattern>uk.co.jacekk.bukkit.baseplugin</pattern>
+							<shadedPattern>uk.co.jacekk.bukkit.baseplugin.v${baseplugin.package}</shadedPattern>
+						</relocation>
+					</relocations>
 				</configuration>
 			</plugin>
 			
