--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.minebans</groupId>
 	<artifactId>minebans</artifactId>
 	<name>MineBans</name>
-	<version>0.16-SNAPSHOT</version>
+	<version>0.16</version>
 	<packaging>jar</packaging>
 	<url>http://dev.bukkit.org/server-mods/minebans/</url>
 	
