--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 	<name>MineBans</name>
 	<version>0.16</version>
 	<packaging>jar</packaging>
-	<url>http://dev.bukkit.org/server-mods/minebans/</url>
+	<url>http://dev.bukkit.org/bukkit-plugins/minebans/</url>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
-		<upload.dbo.category>server-mods</upload.dbo.category>
+		<upload.dbo.category>bukkit-plugins</upload.dbo.category>
 		<upload.dbo.slug>minebans</upload.dbo.slug>
 		
-		<baseplugin.version>11.1</baseplugin.version>
-		<baseplugin.package>11_1</baseplugin.package>
+		<baseplugin.version>12</baseplugin.version>
+		<baseplugin.package>12</baseplugin.package>
 	</properties>
 	
 	<repositories>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.5.1-R0.2</version>
+			<version>1.5.2-R1.0</version>
 			<scope>compile</scope>
 		</dependency>
 		
