--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
 		
 		<dependency>
 			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.6.2-R0.1</version>
+			<artifactId>craftbukkit</artifactId>
+			<version>1.7.2-R0.1</version>
 			<scope>compile</scope>
 		</dependency>
 		
